cluster/examples/kubernetes/nfs/nfs-ceph.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  rook-nfs
