cluster/examples/kubernetes/nfs/rbac.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: rook-nfs
